<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/pick"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/send_map" />

    <Button
        android:id="@+id/loadimage"
        android:textAlignment="center"
        android:layout_width="528dp"
        android:layout_height="wrap_content"
        android:text="@string/load_image" />

    <EditText
        android:id="@+id/targeturi"
        android:autofillHints="@string/insert_map_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send"
        android:layout_width="523dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/send_receive" />

    <ImageView
        android:id="@+id/targetimage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/MapDescription"
        />

</LinearLayout>