<?xml version="1.0" encoding="utf-8"?>
<!-- android:screenOrientation="portrait" , is to force vertical NO MATTER WHAT-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="edu.fiu.adwise.fingerprint_localization.ui.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/scan"
        android:layout_width="156dp"
        android:layout_height="61dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toTopOf="@+id/Localize"
        app:layout_constraintEnd_toEndOf="@+id/train"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toEndOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/Process"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/train"
        android:layout_width="137dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UNDO"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/Process"
        android:layout_width="140dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/process_db"
        app:layout_constraintStart_toEndOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/train" />

    <Button
        android:id="@+id/Localize"
        android:layout_width="139dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/localize"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintStart_toStartOf="@+id/scan" />

    <Button
        android:id="@+id/RESET"
        android:layout_width="112dp"
        android:layout_height="81dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/UNDO"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UNDO"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/undo"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/train"
        app:layout_constraintStart_toEndOf="@+id/RESET"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <ImageView
        android:id="@+id/map"
        android:name=".MainActivity"
        android:layout_width="188dp"
        android:layout_height="465dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:contentDescription="@string/MapDescription"
        android:scaleType="matrix"
        android:src="@drawable/mainbanner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

    </ImageView>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="171dp"
        android:layout_height="80dp"
        android:layout_marginTop="431dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="1dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numberPicker"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
