<!-- android:screenOrientation="portrait" , is to force vertical NO MATTER WHAT-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1"
    tools:context="edu.fiu.adwise.fingerprint_localization.ui.LocalizeActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:noHistory="true"
    android:screenOrientation="portrait" >

    <ImageView
        android:id="@+id/map"
        android:name=".LocalizeActivity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/MapDescription"
        android:adjustViewBounds="true"
        />

    <ProgressBar
        android:id="@+id/localize_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="232dp"
        android:layout_marginTop="0dp"
        android:max="10"
        android:progress="0"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/time"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="@string/time" />

    <Button
        android:id="@+id/scan"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/scan" />

    <Switch
        android:id="@+id/REU2017"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:text="@string/reu2017" />

</RelativeLayout>
